--- a/src/modules/home/home.scss
+++ b/src/modules/home/home.scss
@@ -4,31 +4,6 @@
 }
 
 .home-page-wrapper {
-  margin: 0 30px;
+  margin: 0 30px 30px;
   width: 600px;
-}
-
-.home-page-title {
-  margin: 30px 0;
-}
-
-.button {
-  background-color: #322f32;
-  border: 1px solid #322f32;
-  border-radius: 5px;
-  color: #ffffff;
-  cursor: pointer;
-  display: inline-block;
-  font-weight: 600;
-  margin: 30px 10px;
-  padding: 10px 20px;
-  text-decoration: none;
-
-  &:first-of-type {
-    margin-left: 0;
-  }
-
-  &:hover {
-    background-color: #646464;
-  }
 }
